tests/ui-msrv/transmute-ref-src-unsized.stderr
error[E0599]: the method `transmute_ref` exists for struct `Wrap<&[u8], &[u8; 1]>`, but its trait bounds were not satisfied
  --> tests/ui-msrv/transmute-ref-src-unsized.rs:14:31
   |
14 | const SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `Wrap<&[u8], &[u8; 1]>` due to unsatisfied trait bounds
   |
  ::: src/util/macro_util.rs
   |
   | pub struct Wrap<Src, Dst>(pub Src, pub PhantomData<Dst>);
   | --------------------------------------------------------- doesn't satisfy `Wrap<&[u8], &[u8; 1]>: TransmuteRefDst`
   |
   = note: the following trait bounds were not satisfied:
           `[u8]: Sized`
           `<[u8; 1] as KnownLayout>::PointerMetadata = usize`
           which is required by `Wrap<&[u8], &[u8; 1]>: TransmuteRefDst`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
